# PacketReady

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/Api/: Api.csproj  Api.http  Program.cs
apps/api/Application/: Application.csproj  DependencyInjection.cs
apps/api/Domain/: DomainJson.cs
apps/api/Domain/Audit/: AuditEvent.cs  (+1 more)
apps/api/Infrastructure/: DependencyInjection.cs  Infrastructure.csproj
apps/api/Tests/: Tests.csproj
apps/dashboard/: README.md  package-lock.json  package.json
apps/dashboard/app/: layout.tsx  page.tsx
apps/dashboard/components/: audit-trail.tsx  issue-card.tsx  pdf-preview.tsx  score-badge.tsx
apps/dashboard/lib/: api.ts  blob-url.ts  env.ts  types.ts
data/: README.md  build_nppes_sample.py  nppes-sample-2026.csv
docs/: build-plan.md  conventions.md  demo-script.md  design.md  local-setup.md  style.md
docs/impl/: phase-0-walking-skeleton.md  phase-1-score-from-clean-input.md  phase-2-eval-harness.md  phase-3-extractors.md  phase-4-scale-and-llm-validators.md  phase-5-intake-agent.md  phase-6-demo-polish.md
evals/: tuning_subsets.json
evals/dataset/packet-001-clean-anderson/: golden.json
evals/dataset/packet-002-clean-bautista/: golden.json
evals/dataset/packet-003-conflict-name/: golden.json
evals/dataset/packet-004-conflict-expiry/: golden.json
evals/dataset/packet-005-scanned-anderson/: golden.json
evals/dataset/packet-006-clean-perry/: golden.json
evals/dataset/packet-007-clean-myers/: golden.json
evals/dataset/packet-008-clean-lopez/: golden.json
evals/dataset/packet-009-clean-cervantes/: golden.json
evals/dataset/packet-010-clean-berry/: golden.json
evals/dataset/packet-011-clean-wilson/: golden.json
evals/dataset/packet-012-clean-thomas/: golden.json
evals/dataset/packet-013-clean-jackson/: golden.json
evals/dataset/packet-014-clean-barker/: golden.json
evals/dataset/packet-015-clean-hall/: golden.json
evals/dataset/packet-016-clean-durham/: golden.json
evals/dataset/packet-017-clean-flores/: golden.json
evals/dataset/packet-018-clean-rogers/: golden.json
evals/dataset/packet-019-clean-conflict-name-foster/: golden.json
evals/dataset/packet-020-clean-conflict-name-parker/: golden.json
evals/dataset/packet-021-clean-conflict-name-guzman/: golden.json
evals/dataset/packet-022-clean-conflict-name-alexander/: golden.json
evals/dataset/packet-023-clean-conflict-name-cummings/: golden.json
evals/dataset/packet-024-clean-conflict-name-jackson/: golden.json
evals/dataset/packet-025-clean-conflict-name-bartlett/: golden.json
evals/dataset/packet-026-clean-conflict-taxonomy-calhoun/: golden.json
evals/fixtures/: provider-green.json  provider-red.json  provider-yellow.json
evals/generators/: pyproject.toml
evals/generators/packetready_eval/: __init__.py  conflict_planters.py  identity.py  name_variants.py  nppes_sampling.py  packets.py  scan_artifacts.py  schema.py  specialty_catalog.py
evals/generators/packetready_eval/docs/: _layout.py  board_cert_pdf.py  dea_pdf.py  license_pdf.py  malpractice_pdf.py
evals/generators/tests/: test_conflict_planters.py  test_identity_contract.py  test_name_variants.py  test_nppes_sampling.py  test_packet_buckets.py  test_schema_invariant.py
evals/labels/: human_tiers.json  label.sh
evals/results/: baseline.json
evals/runners/: pyproject.toml
evals/runners/runners/: __init__.py  agreement.py  category_counts.py  compare.py  conflict_metrics.py  extractor_client.py  golden.py  metrics.py  pipeline_client.py  run.py  run_full_pipeline.py  score_metrics.py  tuning_subsets.py
evals/runners/runners/tests/: test_agreement.py  test_compare.py  test_conflict_metrics.py  test_extractor_client.py  test_golden.py  test_metrics.py  test_pipeline_client.py  test_run.py  test_run_full_pipeline.py  test_score_metrics.py
evals/tuning-runs/: baseline.json  iter-00__failures.tsv  iter-01__2026-05-26T115322Z__ad3ae4e9.json  iter-01__failures.tsv  iter-02__2026-05-26T115715Z__48322ce7.json  iter-02__failures.tsv  iter-100__2026-05-26T121208Z__48322ce7.json  iter-100__failures.tsv  iter-99__2026-05-26T115845Z__48322ce7.json
portal/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs
portal/app/: globals.css  layout.tsx  page.tsx
portal/components/: extraction-card.tsx
portal/lib/: api.ts
tools/Seed/: DatePlaceholderResolver.cs  DemoDocumentSeeder.cs  FixtureModel.cs  Program.cs  Seed.csproj
tools/TuneIdentityCoherence/: CountingChatClient.cs  FailuresTsv.cs  IterationLog.cs  PacketGoldenLoader.cs  Program.cs  TuneIdentityCoherence.csproj
tools/demo-tour/: .gitignore  README.md  demo-tour.spec.ts  package-lock.json  package.json  playwright.config.ts  record-tour.ts
(+295 files in other folders)
