[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packetready-eval"
version = "0.1.0"
description = "PacketReady eval-harness generators: synthetic credentialing PDFs + golden labels."
requires-python = ">=3.11"
dependencies = [
    "reportlab==4.2.5",
    "Pillow==11.0.0",
    "PyMuPDF==1.24.13",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
packetready-eval-packets = "packetready_eval.packets:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packetready_eval*"]
