[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packetready-eval"
version = "0.1.0"
description = "PacketReady eval-harness generators: synthetic credentialing PDFs + golden labels."
requires-python = ">=3.11"
dependencies = [
    "reportlab==4.2.5",
    "Pillow==11.0.0",
    "PyMuPDF==1.24.13",
    "httpx==0.27.2",
    # NPPES-sampler companion: provider names + addresses keyed off the same
    # seed as `sample_n`, so PACKET_SPECS is reproducible byte-for-byte.
    "Faker==28.4.1",
]

[project.optional-dependencies]
dev = [
    # Upper bound: pytest 9 is a major and may carry breaking changes. Bump
    # deliberately when it ships, don't let CI silently float onto it.
    "pytest>=8.0.0,<9",
    "ruff>=0.6,<1",
    "mypy>=1.10,<3",
]

[project.scripts]
packetready-eval-packets = "packetready_eval.packets:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packetready_eval*"]

[tool.setuptools.package-data]
# Ship the py.typed marker so mypy follows into this package's annotations
# in downstream consumers (e.g. the runners package).
"packetready_eval" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear, UP = pyupgrade,
# SIM = simplify. Keep the set narrow until a noisy rule lands; expand only
# when we actually want a new check enforced.
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length is wrist-slap; ruff format owns wrapping.

[tool.ruff.lint.isort]
# Keep aliased imports on one line ("X, render as render_x"); the default
# splits them, which doubles the import block height for no benefit.
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# ReportLab + PyMuPDF have no shipped stubs; surface a single ignore instead
# of `# type: ignore` sprinkles in modules that touch them.
[[tool.mypy.overrides]]
module = ["fitz", "reportlab.*", "PIL", "PIL.*"]
ignore_missing_imports = true
