[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packetready-eval-runners"
version = "0.1.0"
description = "PacketReady eval-harness runners: extractor client, scoring, orchestrator."
requires-python = ">=3.11"
dependencies = [
    "httpx==0.27.2",
    "packetready-eval",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
packetready-eval-run = "runners.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runners*"]
