[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packetready-eval-runners"
version = "0.1.0"
description = "PacketReady eval-harness runners: extractor client, scoring, orchestrator."
requires-python = ">=3.11"
dependencies = [
    "httpx==0.27.2",
    "packetready-eval",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "ruff>=0.6,<1",
    "mypy>=1.10,<3",
]

[project.scripts]
packetready-eval-run = "runners.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runners*"]

[tool.setuptools.package-data]
"runners" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

# The sibling `packetready_eval` package is installed editably in CI (see
# .github/workflows/ci.yml) — mypy follows the install. For developers who
# haven't run `pip install -e ./evals/generators` yet, suppress the false
# import-not-found so a freshly-checked-out clone can still typecheck.
[[tool.mypy.overrides]]
module = ["packetready_eval.*"]
ignore_missing_imports = true
